@@ -3201,6 +3201,22 @@ pure_expr *interpreter::doeval(expr x, pure_expr*& e)
   else
     fptr->refc--;
   fptr = save_fptr;
+  if (!res) {
+    // collect garbage
+    pure_expr *t = tmps;
+    while (t) {
+      pure_expr *next = t->xp;
+      pure_freenew(t);
+      t = next;
+    }
+  }
+#if DEBUG>1
+  pure_expr *t = tmps;
+  while (t) {
+    if (t != res) std::cerr << "uncollected temporary: " << t << endl;
+    t = t->xp;
+  }
+#endif
   // NOTE: Result (if any) is to be freed by the caller.
   return res;
 }
@@ -3342,7 +3358,21 @@ pure_expr *interpreter::dodefn(env vars, expr lhs, expr rhs, pure_expr*& e)
 	globalvars.erase(tag);
       }
     }
+    // collect garbage
+    pure_expr *t = tmps;
+    while (t) {
+      pure_expr *next = t->xp;
+      pure_freenew(t);
+      t = next;
+    }
   }
+#if DEBUG>1
+  pure_expr *t = tmps;
+  while (t) {
+    if (t != res) std::cerr << "uncollected temporary: " << t << endl;
+    t = t->xp;
+  }
+#endif
   // NOTE: Result (if any) is to be freed by the caller.
   return res;
 }
